<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="com.sample.weather.fragment.SearchWeatherFragment">

    <com.sample.weather.view.AutoCompleteCustomView
        android:id="@+id/txtAutoInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btnSearch"
        android:layout_toStartOf="@+id/btnSearch"
        android:completionThreshold="1"
        android:hint="@string/hint_enter_city">

        <requestFocus />
    </com.sample.weather.view.AutoCompleteCustomView>

    <Button
        android:id="@+id/btnSearch"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_5_0"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/dp_0_5"
        android:enabled="false"
        android:text="@string/hint_search" />

</RelativeLayout>