<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:padding="@dimen/dp_1_0"
    tools:context=".activity.WeatherActivity">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.sample.weather.fragment.SearchWeatherFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_1_0" />

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.sample.weather.fragment.WeatherResultFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchFragment" />

    <TextView
        android:id="@+id/txtNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resultFragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_4_0"
        android:textAppearance="?attr/textAppearanceListItem"
        android:visibility="gone" />

</RelativeLayout>
