...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDate"
        android:padding="@dimen/dp_2_0">

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="@dimen/dp_1_5_0"
            android:layout_height="@dimen/dp_1_0_0"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_4_0"
            tools:text="70.2 F" />
...
